--- a/SleeveArrow/MainWindow.xaml
+++ b/SleeveArrow/MainWindow.xaml
@@ -2,13 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:local="clr-namespace:SleeveArrow"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mvvm="clr-namespace:SleeveArrow.Mvvm;assembly=SleeveArrow.Mvvm"
         Title="MainWindow"
         Width="800"
         Height="450"
         mc:Ignorable="d">
   <Grid>
-    <ContentControl x:Name="cc" Content="{Binding View}" />
+    <Grid x:Name="cc"
+          mvvm:EventCommandExtension.Attach="[MouseLeftButtonDown]=[TestCommand]"
+          Background="Red" />
   </Grid>
 </Window>
